commit main page

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,3 +11,15 @@ nav a{
     color:white;
     
 }
+
+.header_btn{
+    display: flex;
+    align-items:center;
+
+}
+    button{
+border-color:    rgb(218, 203, 6);
+background-color: rgb(131, 124, 124);
+border-radius: 5px;
+color:white;
+  }
