--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,7 +1,71 @@
-
-.bgimg{
-    background-image: url(../../assets/bgc.png);
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
+.main {
+  position: relative;
 }
+.bgimg {
+  background-image: url(../../assets/bgc.png);
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.main_title_btn {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 5%;
+}
+h1 {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  top: 60%;
+  color: white;
+}
+.content_main{
+    max-width: 30%;
+    width: 1110px;
+height: 590px;
+top: 1311px;
+left: 405px;
+
+}
+.main_title_btn button {
+  position: absolute;
+  align-items: center;
+  top: 80%;
+  background-color: rgba(51, 51, 51, 1);
+  padding: 15px 35px;
+  color: white;
+  text-transform: uppercase;
+}
+.main_content_btn {
+  display: flex;
+  button {
+    text-transform: uppercase;
+  }
+}
+.main_title {
+  margin: 5%;
+  h2 {
+    width: 350px;
+    height: 29px;
+    top: 1050px;
+    left: 785px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+  h3 {
+    font-family: Noto Serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 41px;
+    letter-spacing: 0em;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+}
+
+
